feat: - gateway: DealPayment, ResultPayment, Mock (gateway) - service - model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=smartMesquitaApi
+
+# config db - docker
+spring.datasource.url=jdbc:postgresql://localhost:5432/doacoes_db
+
+spring.datasource.username=postgres
+spring.datasource.password=Alvinho@25
+
+# Dialeto específico para o Hibernate (parte do JPA) se comunicar com o Postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Ação que o Hibernate deve tomar sobre o schema do banco.
+# "update" significa que ele tentará criar/alterar tabelas com base nas suas @Entity.
+# Ótimo para desenvolvimento, mas use com cuidado em produção (Flyway/Liquibase são melhores).
+spring.jpa.hibernate.ddl-auto=update
