feat: - endpoint donation feito (fazer revisão depois).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=smartMesquitaApi
 
 # config db - docker
-spring.datasource.url=jdbc:postgresql://localhost:5432/doacoes_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/donations_db
 
 spring.datasource.username=postgres
 spring.datasource.password=Alvinho@25
@@ -13,3 +13,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # "update" significa que ele tentará criar/alterar tabelas com base nas suas @Entity.
 # Ótimo para desenvolvimento, mas use com cuidado em produção (Flyway/Liquibase são melhores).
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
