--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=smartMesquitaApi
 
 # config db - docker
-spring.datasource.url=jdbc:postgresql://localhost:5432/donations_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/smartMesquita
 
 spring.datasource.username=postgres
 spring.datasource.password=Alvinho@25
@@ -12,5 +12,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Ação que o Hibernate deve tomar sobre o schema do banco.
 # "update" significa que ele tentará criar/alterar tabelas com base nas suas @Entity.
 # Ótimo para desenvolvimento, mas use com cuidado em produção (Flyway/Liquibase são melhores).
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.profiles.active=dev
