--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Ótimo para desenvolvimento, mas use com cuidado em produção (Flyway/Liquibase são melhores).
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.active=dev
+
+# flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
