--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,12 @@ spring.profiles.active=dev
 # flyway
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+
+# Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+
+# App Info
+#app.name=Smart Mesquita API
+#app.version=1.0.0
