--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
             <scope>test</scope>
         </dependency>
         <!-- Swagger UI -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>3.0.0-M1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+<!--            <version>2.6.0</version>-->
+<!--        </dependency>-->
         <!-- Bucket4j (Rate Limiting) -->
         <dependency>
             <groupId>com.bucket4j</groupId>
