--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=smartMesquitaApi
 
 # config db - docker
-spring.datasource.url=jdbc:postgresql://localhost:5432/smartMesquita
+spring.datasource.url=jdbc:postgresql://localhost:5433/smartMesquita
 
 spring.datasource.username=postgres
 spring.datasource.password=Alvinho@25
@@ -19,10 +19,15 @@ spring.profiles.active=dev
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 
-# Swagger
-springdoc.api-docs.path=/api-docs
+# Swagger/OpenAPI
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+
+# Desabilitar CSRF para testes (cuidado em produção!)
+spring.security.csrf.enabled=false
 
 # App Info
 #app.name=Smart Mesquita API
