--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,10 @@
 spring.application.name=smartMesquitaApi
 
-# config db - docker
-spring.datasource.url=jdbc:postgresql://localhost:5433/smartMesquita
+spring.datasource.url=jdbc:postgresql://localhost:5432/smartMesquita
 
 spring.datasource.username=postgres
 spring.datasource.password=Alvinho@25
-
-# Dialeto específico para o Hibernate (parte do JPA) se comunicar com o Postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Ação que o Hibernate deve tomar sobre o schema do banco.
-# "update" significa que ele tentará criar/alterar tabelas com base nas suas @Entity.
-# Ótimo para desenvolvimento, mas use com cuidado em produção (Flyway/Liquibase são melhores).
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.active=dev
 
@@ -20,11 +13,26 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 
 # Swagger/OpenAPI
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.operationsSorter=method
-springdoc.swagger-ui.tagsSorter=alpha
-springdoc.swagger-ui.tryItOutEnabled=true
+#springdoc.api-docs.path=/v3/api-docs
+#springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.swagger-ui.operationsSorter=method
+#springdoc.swagger-ui.tagsSorter=alpha
+#springdoc.swagger-ui.tryItOutEnabled=true
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+# spring.data.redis.password=sua-senha (se tiver)
+spring.data.redis.timeout=60000
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+spring.data.redis.lettuce.pool.max-wait=-1ms
+
+# Rate Limiting Configuration (Opcional - valores padrão)
+ ratelimit.default.limit=10
+ ratelimit.default.duration=1
+ ratelimit.default.unit=MINUTES
 
 # Desabilitar CSRF para testes (cuidado em produção!)
 spring.security.csrf.enabled=false
