--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=smartMesquitaApi
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/smartMesquita
+spring.datasource.url=jdbc:postgresql://localhost:5433/smartMesquita
 
 spring.datasource.username=postgres
 spring.datasource.password=Alvinho@25
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.profiles.active=dev
 
 # flyway
@@ -28,12 +28,10 @@ spring.data.redis.lettuce.pool.max-idle=8
 spring.data.redis.lettuce.pool.min-idle=0
 spring.data.redis.lettuce.pool.max-wait=-1ms
 
-# Rate Limiting Configuration (Opcional - valores padrÃ£o)
  ratelimit.default.limit=10
  ratelimit.default.duration=1
  ratelimit.default.unit=MINUTES
 
-# Desabilitar CSRF para testes (cuidado em produÃ§Ã£o!)
 spring.security.csrf.enabled=false
 
 # App Info
