--- a/pom.xml
+++ b/pom.xml
@@ -88,15 +88,13 @@
 <!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
 <!--            <version>2.6.0</version>-->
 <!--        </dependency>-->
-        <!-- Bucket4j (Rate Limiting) -->
-        <dependency>
-            <groupId>com.bucket4j</groupId>
-            <artifactId>bucket4j-core</artifactId>
-            <version>8.7.0</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
         </dependency>
     </dependencies>
 
