--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/smartMesquita
 spring.datasource.username=postgres
 spring.datasource.password=Alvinho@25
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=dev
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
 
 # flyway
 spring.flyway.enabled=true
