--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 spring.application.name=smartMesquitaApi
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/smartMesquita
+jwt.secret=${JWT_SECRET:dev-secret-key-change-in-production-minimum-256-bits-required}
 
-spring.datasource.username=postgres
-spring.datasource.password=Alvinho@25
+# CORS Configuration
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,https://app.smartmesquita.com}
+
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/smartMesquita}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:Alvinho@25}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.active=dev
 
-server.error.include-message=always
-server.error.include-binding-errors=always
-server.error.include-stacktrace=always
+# application-prod.properties
+server.error.include-stacktrace=never
+server.error.include-message=never
 
 # flyway
 spring.flyway.enabled=true
