--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=smartMesquitaApi
 jwt.secret=${JWT_SECRET:dev-secret-key-change-in-production-minimum-256-bits-required}
 
 # CORS Configuration
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,https://app.smartmesquita.com}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/smartMesquita}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:Alvinho@25}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=dev
 
 # application-prod.properties
