--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,12 @@ jwt.secret=${JWT_SECRET:dev-secret-key-change-in-production-minimum-256-bits-req
 # CORS Configuration
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/smartMesquita}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/smartMesquita}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:Alvinho@25}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=dev
-
-# application-prod.properties
-server.error.include-stacktrace=never
-server.error.include-message=never
 
 # flyway
 spring.flyway.enabled=true
@@ -45,3 +41,10 @@ spring.data.redis.lettuce.pool.max-wait=-1ms
 # App Info
 #app.name=Smart Mesquita API
 #app.version=1.0.0
+
+# Logging
+logging.level.br.com.smartmesquitaapi=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+server.error.include-stacktrace=always
+server.error.include-message=always
