--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ build/
 ### VS Code ###
 .vscode/
 /nul
+
+### Environment Variables ###
+.env
+.env.local
+.env.*.local
+
+### Logs ###
+*.log
+logs/
