--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=smartMesquitaApi
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
+
 jwt.secret=${JWT_SECRET:dev-secret-key-change-in-production-minimum-256-bits-required}
 
 # CORS Configuration
@@ -8,9 +13,6 @@ cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/smartMesquita}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:Alvinho@25}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.profiles.active=dev
 
 # flyway
 spring.flyway.enabled=true
