update: render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,7 @@ services:
     healthCheckPath: /actuator/health
 
   # Banco de dados PostgreSQL
-  - type: pgsql
+  - type: postgresql
     name: smart-mesquita-db
     databaseName: smartmesquita
     user: smartmesquita
