--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   # Aplicação Spring Boot
   - type: web
     name: smart-mesquita-api
-    env: java
-    buildCommand: ./mvnw clean package -DskipTests
-    startCommand: java -Dserver.port=$PORT -jar target/smartMesquitaApi-0.0.1-SNAPSHOT.jar
+    runtime: docker
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
@@ -15,7 +14,7 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: CORS_ALLOWED_ORIGINS
-        value: https://your-frontend-url.com
+        value: https://nawatfrontend-btrc1qyvc-alvaro-mashnis-projects.vercel.app/
       - key: JAVA_OPTS
         value: -Xmx512m -Xms256m
     healthCheckPath: /actuator/health
