--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
 # Configuração de Produção para Render
 spring.application.name=smartMesquitaApi
 
-# Database Configuration (Render fornece via DATABASE_URL)
-spring.datasource.url=${DATABASE_URL}
+# Database Configuration (Render fornece via JDBC_DATABASE_URL)
+# O script de entrada converte postgres:// para jdbc:postgresql://
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
