--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
-      - key: DATABASE_URL
+      - key: JDBC_DATABASE_URL
         fromDatabase:
           name: smart-mesquita-db
           property: connectionString
@@ -15,6 +15,21 @@ services:
         generateValue: true
       - key: CORS_ALLOWED_ORIGINS
         value: https://nawatfrontend-btrc1qyvc-alvaro-mashnis-projects.vercel.app/
+      - key: REDIS_HOST
+        fromService:
+          name: smart-mesquita-redis
+          type: keyvalue
+          property: host
+      - key: REDIS_PORT
+        fromService:
+          name: smart-mesquita-redis
+          type: keyvalue
+          property: port
+      - key: REDIS_PASSWORD
+        fromService:
+          name: smart-mesquita-redis
+          type: keyvalue
+          property: password
       - key: JAVA_OPTS
         value: -Xmx512m -Xms256m
     healthCheckPath: /actuator/health
