--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=false
 jwt.secret=${JWT_SECRET}
 
 # CORS Configuration
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
 
 # Flyway
 spring.flyway.enabled=true
