--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,6 +21,11 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.validate-on-migrate=true
 
+# Define qual È a vers„o "base" que j· existe no banco.
+# Se a sua nova migration È a V004, defina o baseline como 3.
+# Assim, ele pula a V1, V2 e V3 e roda APENAS a V004.
+spring.flyway.baseline-version=3
+
 # Swagger/OpenAPI (desabilitado em produ√ß√£o por seguran√ßa)
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
